--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,7 @@
 
 	<link rel="stylesheet" href="global.css">
 	<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="Favicon.png">
 
 	
 	<!-- Sapper generates a <style> tag containing critical CSS
